--- a/gb/19/11/28/n11686283.md
+++ b/gb/19/11/28/n11686283.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yzhmwg332/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yzhmwg332/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yzhmwg332/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yzhmwg332/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yzhmwg332/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yzhmwg332/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>梅西游行 曼哈顿多区域封路</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年11月28日讯】（大纪元记者黄小堂报美国纽约导）游行期间（早上9点至中午12点），下列道路将会<ahref="https://github.com/yzhmwg332/djy/blob/master/gb/tag/%E5%B0%81%E8%B7%AF.md#1">封路</a>，车辆无法进入：第六大道（西33街与西59街之间）；第八大道（西33街与西40街之间、西57街和西59街之间）；百老汇（西34街与西40街之间、西57街与西59街之间）；西42街（第五大道和第八大道之间）；西57街（第五大道和第八大道之间）。</p>
-<figure id="11686285" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/cd3b8c49208200164cc6ff8ea40a6b67-450x300.jpeg" alt="28日梅西百货感恩节游行，曼哈顿多路段封路至下午，请民众注意。" width="500" /><figcaption class="wp-caption-text">28日梅西百货感恩节游行，曼哈顿多路段<ahref="https://github.com/yzhmwg332/djy/blob/master/gb/tag/%E5%B0%81%E8%B7%AF.md#1">封路</a>至下午，请民众注意。（NYPD推特）</figcaption></figure>
+<p>【大纪元2019年11月28日讯】（大纪元记者黄小堂报美国纽约导）游行期间（早上9点至中午12点），下列道路将会<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B0%81%E8%B7%AF.md#1">封路</a>，车辆无法进入：第六大道（西33街与西59街之间）；第八大道（西33街与西40街之间、西57街和西59街之间）；百老汇（西34街与西40街之间、西57街与西59街之间）；西42街（第五大道和第八大道之间）；西57街（第五大道和第八大道之间）。</p>
+<figure id="11686285" aria-describedby="caption-11686285" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/cd3b8c49208200164cc6ff8ea40a6b67-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/cd3b8c49208200164cc6ff8ea40a6b67-450x300.jpeg" alt="28日梅西百货感恩节游行，曼哈顿多路段封路至下午，请民众注意。" width="500" /></a><figcaption id="caption-11686285" class="wp-caption-text">28日梅西百货感恩节游行，曼哈顿多路段<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B0%81%E8%B7%AF.md#1">封路</a>至下午，请民众注意。（NYPD推特）</figcaption></figure>
 <p>西34街和西40街之间的百老汇、西23街和西42街之间的第六大道、西34街和42街之间第七大道等路段也从28日凌晨至28日下午封路。◇</p>
 <p>责任编辑：魏敏</p>
 
@@ -14,47 +14,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/9/22/n10732880.md#1">布碌崙-皇后区高速路改建公听</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/9/25/n10739008.md#1">联合国大会开幕  通勤者注意封路安排</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/11/22/n10867477.md#1">最高只27℉   纽约市迎117年来最冷感恩节</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/12/29/n10939683.md#1">时代广场跨年倒数 纽约市警公布维安措施</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/1/31/n11014468.md#1">法拉盛黄历新年游行 年初五盛大登场</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/2/8/n11031884.md#1">纽约法拉盛游行9日登场 警方公布交通管制措施</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/5/16/n11261922.md#1">八大道警民会 72分局新任副局长亮相</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/8/13/n11449569.md#1">法拉盛闹市华警猛追 擒获嫌犯 一勇警摔伤（影音）</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/10/9/n11577586.md#1">法拉盛商改区推电子折扣券  接受商家申请</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/10/25/n11610972.md#1">超级娱乐购物中心“美国梦”本周末正式开放</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/9/22/n10732880.md#1">布碌崙-皇后区高速路改建公听</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/9/25/n10739008.md#1">联合国大会开幕  通勤者注意封路安排</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/11/22/n10867477.md#1">最高只27℉   纽约市迎117年来最冷感恩节</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/29/n10939683.md#1">时代广场跨年倒数 纽约市警公布维安措施</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/31/n11014468.md#1">法拉盛黄历新年游行 年初五盛大登场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/2/8/n11031884.md#1">纽约法拉盛游行9日登场 警方公布交通管制措施</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/5/16/n11261922.md#1">八大道警民会 72分局新任副局长亮相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/8/13/n11449569.md#1">法拉盛闹市华警猛追 擒获嫌犯 一勇警摔伤（影音）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/9/n11577586.md#1">法拉盛商改区推电子折扣券  接受商家申请</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/25/n11610972.md#1">超级娱乐购物中心“美国梦”本周末正式开放</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/4/n10689028.md#1" target="_blank">顾雪雍：89岁老人说往事 一字一泪斥残暴</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/20/12/30/n12654622.md#1">【命理】他才胜于德 如何走上自我毁灭之路</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12777426.md#1">《转法轮》提及的史前文明案例：海底建筑</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/24/n12771764.md#1">预言试析（9）诺查丹玛斯预言大瘟疫时间的算法</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/3/1/n12782578.md#1">【新闻大家谈】习有备胎？遭内外合击难安</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12779667.md#1">【拍案惊奇】翠字惹怒习近平 武统从凤梨开始？</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12779601.md#1">一周军情速递：飞行员遇UFO 美开发新无人机</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12779667.md#1">【拍案惊奇】翠字惹怒习近平 武统从凤梨开始？</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12776649.md#1">《蜘蛛人3》正式定名 汤姆霍兰德挥别漫威宇宙</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/27/n12779449.md#1">【重播】CPAC大会第三日 川普闭幕演讲</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12776649.md#1">《蜘蛛人3》正式定名 汤姆霍兰德挥别漫威宇宙</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/27/n12779516.md#1">杜汶泽狠酸中共 呼吁港人挺台湾凤梨</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12780937.md#1">杨颖上台走秀 黄晓明坐观众席拍照登热搜</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12776726.md#1">《神隐少女》真人版 桥本环奈上白石萌音双主演</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12777755.md#1">范冰冰贴角色合集庆元宵 风格搞怪等待复出？</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/27/n12779046.md#1">吴孟达病逝 肝癌一发现多是晚期夺命快 3招预防</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/26/n12777393.md#1">千万别生吃！7种蔬菜必须煮熟食用 避免吃毒素</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12779783.md#1">中共禁台湾凤梨 多国网友争先发表挺台言论</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/28/n12780850.md#1">新冠病毒能饿死？中医师：吃它才能快速恢复</a></li>
-<li><a href="https://github.com/yzhmwg332/djy/blob/master/gb/21/2/15/n12753294.md#1">哪种癌症存活率最高 哪种癌症最致命</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yzhmwg332/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yzhmwg332/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/28/n11686283.htm">梅西游行 曼哈顿多区域封路</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/28/n11686283.htm">梅西游行 曼哈顿多区域封路</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yzhmwg332/djy/blob/master/gb/19/11/28/n11686283.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yzhmwg332/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yzhmwg332/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yzhmwg332/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yzhmwg332/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzhmwg332/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/11/28/n11686283.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
